@@ -1,6 +1,6 @@
 /* This string is written to the output primary header as CAL_VER. */
-#define ACS_CAL_VER "8.3.5 (21-Oct-2016)"
-#define ACS_CAL_VER_NUM "8.3.5"
+#define ACS_CAL_VER "9.0.0 (22-Nov-2016)"
+#define ACS_CAL_VER_NUM "9.0.0"
 
 /* name and version number of the CTE correction algorithm */
 #define ACS_CTE_NAME "PixelCTE 2012"
