@@ -1,3 +1,7 @@
+### 22-Nov-2016 - PLL -- Version 9.0.0
+    BLEVCORR modified to correctly process all subarrays by using new OSCNTAB
+    that correctly define overscans for all WFC and HRC apertures.
+
 ### 21-Oct-2016 - PLL -- Version 8.3.5
     BLEVCORR modified to correctly process polarizer and ramp subarrays that
     use new readout format added by FSW change since Oct 2016.
